fix overflow pack preview

--- a/src/app/Pages/all-packs-page-new/packs-card/packs-card.component.css
+++ b/src/app/Pages/all-packs-page-new/packs-card/packs-card.component.css
@@ -4,7 +4,8 @@
 }
 
 ::ng-deep .custom-dialog .mat-dialog-container {
-    overflow: hidden !important;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   
   
