--- a/src/app/Shared Components/pack/pack-preview/pack-preview.component.css
+++ b/src/app/Shared Components/pack/pack-preview/pack-preview.component.css
@@ -260,13 +260,13 @@ mat-icon {
   height: 14rem !important;
 }
 
-::ng-deep .custom-dialog .mat-dialog-container {
+/* ::ng-deep .custom-dialog .mat-dialog-container {
   overflow: hidden !important;
-}
+} */
 
 
 .modal-preview {
-  width: 448px;
+  width: 430px;
 }
 
 @media screen and (max-width: 1024px) {
